--- a/assets/layout.css
+++ b/assets/layout.css
@@ -1,3 +1,12 @@
+html {
+    position: relative;
+    min-height: 100%;
+  }
+
+  body {
+    margin-bottom: 60px; /* Margin bottom by footer height */
+  }
+
 header {
     border-style: solid;
     border-width: 1px; 
@@ -8,31 +17,51 @@ header {
     margin-bottom: 2.5%;
 }
 
+/* .background{
+    border-style: solid; 
+    border-width: 1px; 
+} */
+
+h1 {
+    text-align: center; 
+}
+
+h2 { 
+    text-align: center; 
+    padding-bottom: .3em; 
+}
+
 #profilePic {
     float: left; 
     margin-right: 1em; 
     border-radius: 10%
 }
 
-div {
-    border-style: dashed; 
-    border-width: 1px; 
-}
 
 #contactLink {
     list-style-type: none;
-    float: left; 
-    
+    float: left;
 }
 
-/* footer {
-    position: fixed; 
-    bottom: 0%; 
-    right: 0%; 
-    left: 0%; 
-    text-align: center;
-    padding: 1em 5em; 
-    margin-top: 2.5%;
-    border-style: dashed; 
-    border-width: 1px; 
-} */
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px; /* Set the fixed height of the footer here */
+    line-height: 60px; /* Vertically center the text there */
+    /* border-top: solid; 
+    border-width: 1px;  */
+}
+
+
+
+.noGutters {
+    margin-right: 0;
+    margin-left: 0;
+  
+    > .col,
+    > [class*="col-"] {
+      padding-right: 0;
+      padding-left: 0;
+    }
+  }
