Image fix, again.

--- a/assets/layout.css
+++ b/assets/layout.css
@@ -55,7 +55,7 @@ h2 {
 
 
 
-.noGutters {
+/* .noGutters {
     margin-right: 0;
     margin-left: 0;
   
@@ -64,4 +64,4 @@ h2 {
       padding-right: 0;
       padding-left: 0;
     }
-  }
+  } */
