--- a/assets/color.css
+++ b/assets/color.css
@@ -2,9 +2,9 @@
     background-color: #f1f1f1; 
 } */
 
-.footer {
+/* .footer {
     background-color: #f1f1f1; 
-}
+} */
 
 .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
     color: coral; 
