--- a/assets/layout.css
+++ b/assets/layout.css
@@ -1,46 +1,72 @@
-html {
-    position: relative;
-    min-height: 100%;
+*{margin:0;}
+
+html, body {
+    height: 99%;
+    overflow: hidden;
   }
 
-  body {
-    margin-bottom: 60px; /* Margin bottom by footer height */
-  }
+body {
+margin-bottom: 60px; /* Margin bottom by footer height */
+}
 
-header {
-    border-style: solid;
-    border-width: 1px; 
+#wrapperOne {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+#wrapperTwo {
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    padding-right: 17px; /* Increase/decrease this value for cross-browser compatibility */
+    box-sizing: content-box; /* So the width will be 100% + 17px */
 }
 
 .main {
     margin-top: 2.5%; 
     margin-bottom: 2.5%;
 }
-
-/* .background{
-    border-style: solid; 
-    border-width: 1px; 
-} */
-
 h1 {
     text-align: center; 
+    font-family: 'Poiret One', cursive;
 }
 
-h2 { 
-    text-align: center; 
-    padding-bottom: .3em; 
+#hello {
+    font-family: 'Poiret One', cursive;
+}
+
+@keyframes picture {
+    from {margin-bottom: 100%;}
+    to {margin-bottom: 0%;}
 }
 
 #profilePic {
     float: left; 
     margin-right: 1em; 
-    border-radius: 10%
+    border-radius: 50%; 
+    margin-bottom: 0%; 
+    animation-name: picture;
+    animation-duration: 1.5s;
+}
+
+#blurb {
+    text-align: center; 
 }
 
 
 #contactLink {
     list-style-type: none;
-    float: left;
+    float: center;
+}
+
+#connect {
+    font-family: 'Poiret One', cursive;
+    text-align: center; 
+}
+
+.icon {
+    margin-left: .75em; 
 }
 
 .footer {
