--- a/assets/color.css
+++ b/assets/color.css
@@ -6,6 +6,14 @@
     background-color: #f1f1f1; 
 } */
 
-.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
+ .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link  {
     color: coral; 
+}
+
+.bodyLink {
+    color: coral;
+}
+
+.bodyLink:hover { 
+    color: grey; 
 }
